2007-08-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm (X11_text): Fix conditionally missing {.

2007-08-04  Ethan Merritt  <merritt@u.washington.edu>

	* Tagged using command
		cvs tag -c "Release_4_2_1-pre1"

	* PATCHLEVEL src/version.c configure.in:
	Increment version to Version 4.2.1

	* docs/gnuplot.doc docs/gnuplot.texi:  Revert leakage from 
	cvs branch (4.3) documentation into 4.2 documentation. In 
	particular, 4.2 does not support transparency or iteration.

	* Makefile.am: Remove reference to obsolete README.exp

	* missing:  Nobody "really needs" makeinfo.  Allow installs without it.

2007-08-04  Matthias Habl  <mhabl@users.sourceforge.net>

	* configure.in: Allow to configure from inside an emacs script.
	Bug #1741156

2007-08-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c (read_line): Treat line extension consistently
	for both interactive and non-interactive input paths. This is 
	Timothee Lecomte's version of the fix.
	Bug #1753069.

2007-07-27  Dietmar Warning  <dietmar.warning@arcor.de>

	* term/win.c (WIN_enhanced_open): Avoid compiler warning.

2007-07-24  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fixed misprint in "3 multi-branch".

2007-07-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/win.trm: Document reading of wgnuplot.ini in user's %APPDATA%
	directory.

2007-07-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/fit.c (fit_command):
	Accept a string variable as the file name for "fit via <viafile>".
	Bug #1755532

2007-06-21  Ethan Merritt  <merritt@u.washington.edu>

	Fix two special cases where gnuplot auto-increments the line type, but
	does not check whether the user has requested user-defined line styles
	instead (via "set style increment user").

	* src/graph3d.c (do_3dplot cntr3d_lines):  If the [default] option
	`set clabel` is in effect then contours auto-increment over line types.
	Check for prefer_line_styles at this point.
